--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ajit's Portfolio</title>
+  <title>Minhyuk Portfolio</title>
   <link rel="icon" href="Image/engineer.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -20,7 +20,7 @@
 <body class="container-fluid body_section">
         <header>
               <nav class="navbar navbar-expand-lg navbar-light ">
-                <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+                <a class="navbar-brand brand-name" href="#">Cho Minhyuk</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,29 +49,24 @@
           <section id = "Home">
               <div class="row column1">
                 <div class="col-lg-6 col-md-6 first-image">
-                    <img class = "boyimage" src="Image/20200630_162659.gif" alt="">
+                    <img class = "boyimage" src="Image/Minhyuk.jpg" alt="">
                 </div>  
                   <div class="col-lg-6 section-1">
-                      <h1 class = "Hello">Hello All! I'm Ajit <span class="wave">👋</span></h1>
-                      <p>A passionate Developer having an experience in Data Analytics,
-                          Machine Learning and Web Development and want to develop sustainable and 
-                          scalable social and technical systems to create impact</p>
+                      <h1 class = "Hello">Hello I'm ChoMinHyuk <span class="wave">👋</span></h1>
+                      <p>I am a college student who wants to become a security expert</p>
                           <div class=social_media_icon>
-                            <a class="btn" href="https://www.instagram.com/ajit.verma_/" target=_blank>
+                            <a class="btn" href="https://www.instagram.com/jo_mmin/" target=_blank>
                               <i class="fab fa-instagram"></i>
                             </a>
-                            <a class="btn" href="https://www.linkedin.com/in/ajit-verma-70b9b0196/" target=_blank>
-                              <i class="fab fa-linkedin" aria-hidden="true"></i>
-                            </a>
-                            <a class="btn" href="https://github.com/AjitVerma15" target=_blank>
+                            <a class="btn" href="https://github.com/Mindol7" target=_blank>
                               <i class="fab fa-github"></i>
                             </a>
-                            <a class="btn" href="mailto:ajitverma1503@gmail.com" target=_blank>
+                            <a class="btn" href="mailto:cgumgek8@gmail.com" target=_blank>
                               <i class="fab fa-google"></i>
                             </a>
                           </div>
                   </div>
-                  <div class="Image-boy col-lg-6"><img class="boy" src="Image/Boy-image.png" alt=""></div>
+                  <div class="Image-boy col-lg-6"><img class="boy" src="Image/Minhyuk_selfie.jpg" alt=""></div>
               </div>
           </section>
 
@@ -83,7 +78,7 @@
                     <img class = "Feature-svg-image" src="Image/Data_Analysis.svg" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6">
-                    <h1 class= "Feature-Heading" >Data Analytics & ML</h1>
+                    <h1 class= "Feature-Heading" >Program Reversing</h1>
                     <ul class = "dev-icon">
                       <li><i class="fab fa-python fa-5x" style="color:#3776ab"></i></li>
                       <li><img class="numpy" src="Image/numpy-ar21.svg" alt=""></li>
@@ -91,8 +86,7 @@
                     </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         💥 Developing Models that clean, tranform and analyse raw data to discover useful information,
-                         in order to make conclusions about the data.</p>
+                         💥 I'm studying program reversing. I'm studying buffer overflow, stack overflow, format string attack, etc.</p>
                       <p  class ="Features-paragraph">
                          💥 Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, Seaborn etc. and have knowledge of
                         Data analysis algorithms and techniques.</p>
@@ -101,7 +95,7 @@
               </div>
               <div class="row feature-2">
                 <div class="col-lg-6 col-md-6 feature-web">
-                  <h1 class="Feature-Heading">Web Development</h1>
+                  <h1 class="Feature-Heading">Digital Forensic</h1>
                   <ul class = "dev-icon">
                     <li><i class="fab fa-html5 fa-5x" style="color:#e34f26"></i></li>
                     <li><i class="fab fa-css3-alt fa-5x" style="color:#1572b6"></i></li>
@@ -130,7 +124,7 @@
                     <img class = "Feature-svg-image-3" src="Image/Coding.svg" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6 feature-coding">
-                    <h1 class="Feature-Heading">Data Structures and Algorithms</h1>
+                    <h1 class="Feature-Heading">System Hacking</h1>
                     <ul class = "dev-icon">
                      <li></li>
                      <li><i class="fas fa-laptop-code fa-4x"></i></li>
