--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <img class = "Feature-svg-image" src="Image/Data_Analysis.svg" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6">
-                    <h1 class= "Feature-Heading" >Program Reversing</h1>
+                    <h1 class= "Feature-Heading" >Reverse Engineering</h1>
                     <ul class = "dev-icon">
                       <li><i class="fab fa-python fa-5x" style="color:#3776ab"></i></li>
                       <li><img class="numpy" src="Image/numpy-ar21.svg" alt=""></li>
@@ -86,10 +86,9 @@
                     </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         💥 I'm studying program reversing. I'm studying buffer overflow, stack overflow, format string attack, etc.</p>
+                         💥 Reverse Engineering is the process of analyzing a software or hardware system to understand its design or components, and to restore the original design specification or source code.</p>
                       <p  class ="Features-paragraph">
-                         💥 Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, Seaborn etc. and have knowledge of
-                        Data analysis algorithms and techniques.</p>
+                         💥 For reverse engineering, it is important to understand the assembly, and it is important to understand the process of controlling the branching of the system.</p>
                     </div>
                 </div>
               </div>
@@ -108,11 +107,11 @@
                   </ul>
                   <div class = "Data-Analytic">
                     <p class ="Features-paragraph">
-                       💥 Building Fully responsive website frontend using HTML, CSS, Bootstrap and Javascript.</p>
+                       💥 Digital forensics is the process of backtracking to collect evidence of crime on the Internet.</p>
                     <p  class ="Features-paragraph">
-                       💥 As of now I have knowledge only of frontend but in near future I will learn more skills and excited to explore React, NodeJS, Django, Flask and many more.</p>
+                       💥 There are various types of digital forensics, such as mobile forensics, memory forensics, network forensics, and window forensics.</p>
                       <p  class ="Features-paragraph">
-                       💥 I have also used Abode Photoshop, Illustrator and Figma to design User interface of websites and mobile applications and designed logos.</p>
+                       💥 In addition, there are forensic tools such as AutoPsy, Encase, and FTK in digital forensics.</p>
                       </div>
                 </div>
                 <div class="col-lg-6 col-md-6 Feature-second-image ">
@@ -133,15 +132,15 @@
                     </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         💥 I have knowledge of Data Structures like Hash Tables, Trees, Tries, Graphs, and various algorithms for solving various problems efficiently.</p>
+                         💥 System hacking is the process of taking over a program's root authority by taking over the root authority.</p>
                       <p  class ="Features-paragraph">
-                         💥 As I know Data Structures and Algorithms are the heart of programming, so I love to solve programming questions in different competitive websites like Codeforces, Codechef, Hackerrank and many more.</p>
+                         💥 I'm studying buffer overflow, stack overflow, format string attack, etc.</p>
                         </div>
                   </div>
               </div>
                
         
           </section>
-    <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+    <footer class=footer>Made with ❤️ by MinHyuk Cho</footer>
 </body>
 </html>
