--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <h1 class= "Feature-Heading" >Reverse Engineering</h1>
                     <ul class = "dev-icon">
                       <li><i class="fab fa-python fa-5x" style="color:#3776ab"></i></li>
-                      <li><img class="numpy" src="Image/numpy-ar21.svg" alt=""></li>
-                      <li><img class = "pandas" src="Image/kindpng_5747046.png" alt=""></li>
+                      <li><img class="numpy" src="Image/ollydbg.png" alt=""></li>
+                      <li><img class = "pandas" src="Image/x64dbg.png" alt=""></li>
                     </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
