--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1>What I Do ?</h1>
               <div class = "row feature-1">
                   <div class="col-lg-6 col-md-6 Feature-first-image ">
-                    <img class = "Feature-svg-image" src="Image/Data_Analysis.svg" alt="">
+                    <img class = "Feature-svg-image" src="Image/forensic.jpeg" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6">
                     <h1 class= "Feature-Heading" >Reverse Engineering</h1>
@@ -96,8 +96,8 @@
                   <h1 class="Feature-Heading">Digital Forensic</h1>
                   <ul class = "dev-icon">
                     <li><img class="ftk" src="Image/ftk.png" alt=""></li>
-                    <li><img class = "encase" src="Image/encase.png" alt=""></li>
                     <li><img class = "autopsy" src="Image/autopsy.png" alt=""></li>
+                    <li><img class = "encase" src="Image/encase.png" alt=""></li>
                   </ul>
                   <div class = "Data-Analytic">
                     <p class ="Features-paragraph">
@@ -109,12 +109,12 @@
                       </div>
                 </div>
                 <div class="col-lg-6 col-md-6 Feature-second-image ">
-                  <img class = "Feature-svg-image" src="Image/website.svg" alt="">
+                  <img class = "Feature-svg-image" src="Image/forensic.png" alt="">
                 </div>
               </div>
               <div class="row feature-3">
                 <div class = "col-lg-6 col-md-6 Feature-third-image">
-                    <img class = "Feature-svg-image-3" src="Image/Coding.svg" alt="">
+                    <img class = "Feature-svg-image-3" src="Image/sys_hack.png" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6 feature-coding">
                     <h1 class="Feature-Heading">System Hacking</h1>
