--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1>What I Do ?</h1>
               <div class = "row feature-1">
                   <div class="col-lg-6 col-md-6 Feature-first-image ">
-                    <img class = "Feature-svg-image" src="Image/forensic.jpeg" alt="">
+                    <img class = "Feature-svg-image" src="Image/rev.png" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6">
                     <h1 class= "Feature-Heading" >Reverse Engineering</h1>
