--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <h1 class="Feature-Heading">Digital Forensic</h1>
                   <ul class = "dev-icon">
                     <li><img class="ftk" src="Image/ftk.png" alt=""></li>
-                    <li><img class = "autopsy" src="Image/autopsy.png" alt=""></li>
+                    <li><img class = "autopsy" src="Image/auto.png" alt=""></li>
                     <li><img class = "encase" src="Image/encase.png" alt=""></li>
                   </ul>
                   <div class = "Data-Analytic">
