--- a/Education.html
+++ b/Education.html
@@ -30,7 +30,7 @@
 <body class="container-fluid body_section">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+            <a class="navbar-brand brand-name" href="#">Cho Minhyuk</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
     <section>
         <div class="container">
             <div class="Heading">
-                <h1>Degrees Received</h1>
+                <h1>Experiences</h1>
                 <br>
             </div>
             <div class="timeline">
@@ -83,22 +83,22 @@
                 </div>
                 <div class="timeline-section">
                     <div class="timeline-date">
-                        2017 - Present
+                        2020 - Present
                     </div>
                     <div class="row">
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>J.C. Bose University of
-                                    Science and Technology, YMCA
-                                    <p class="degree">B.tech in Computer Engineering</p>
+                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>Dankook University, Jukjeon
+                                    <p class="degree">Mobile System Engineering, MSE</p>
                                 </div>
                                 <div class="box-content">
-                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://jcboseust.ac.in/"
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="http://www.dankook.ac.kr/"
                                        target=_blank style="color: white;">Website</a>
-                                    <div class="box-item">💥 I have studied software engineering subjects like Data Structures,
-                                        Algorithms, DBMS, OS, CA, CN etc.</div>
-                                    <div class="box-item"><b>💥 CGPA</b>: 7.14 </div>
+                                    <div class="box-item">💥 I have studied engineering subjects like Data Struct, Computer Architecture, SW Security, System and Signal
+                                        , Computer Network, etc.
+                                    </div>
+                                    <div class="box-item"><b>💥 GPA</b>: 4.24/4.5 </div>
                                 </div>
                             </div>
                         </div>
@@ -107,21 +107,55 @@
 
                 <div class="timeline-section">
                     <div class="timeline-date">
-                        2015 - 2017
+                        2024.03 - Present
                     </div>
                     <div class="row">
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-school" aria-hidden="true"></i> G.B.S.S School, Sarojini Nagar <p class="degree">Senior Secondary Education</p>
+                                    <i class="fas fa-school" aria-hidden="true"></i> Undergraduate Research Student, CSOS Lab <p class="degree">Advisor Professor, Cho-Sung-Jae</p>
                                 </div>
                                 <div class="box-content">
-                                    <a class="btn btn-sm btn-dark float-right" role="button"
-                                        style="color: white;">Details</a>
-                                    <div class="box-item">💥 I have studied the subjects Physics,
-                                        Chemistry, Mathematics etc. </div>
-                                    <div class="box-item"><b>💥 Percentage</b>: 80%</div>
-
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="http://securesw.dankook.ac.kr/"
+                                       target=_blank style="color: white;">Website</a>
+                                    <div class="box-item">💥 I have researched Digital Foresic, and been write a thesis. </div>
+                                    <div class="box-item"><b>💥 Research Progress Percent</b>: 60%</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-section">
+                    <div class="timeline-date">
+                        2021.08.02 - 2023.02.01
+                    </div>
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="timeline-box">
+                                <div class="box-title">
+                                    <i class="fas fa-school" aria-hidden="true"></i> 66th Division Korean Army Sgt. Maturity
+                                </div>
+                                <div class="box-content">
+                                    <div class="box-item">💥 Network Operations/Maintenance soldier</div>
+                                    <div class="box-item"><b>💥 Percent</b>: 100%</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-section">
+                    <div class="timeline-date">
+                        2021.04
+                    </div>
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="timeline-box">
+                                <div class="box-title">
+                                    <i class="fas fa-school" aria-hidden="true"></i> Coding Coluteer <p class="degree">Taesung-Highschool</p>
+                                </div>
+                                <div class="box-content">
+                                    <div class="box-item">💥 I conducted coding education volunteer for 2nd graders of high school.</div>
+                                    <div class="box-item"><b>💥 Research Progrss Percent</b>: 100%</div>
                                 </div>
                             </div>
                         </div>
