--- a/Education.html
+++ b/Education.html
@@ -171,14 +171,14 @@
         <div class="container certificate">
         <div class="row">
             <div class="col-md-4">
-                <a target="_blank" href="https://drive.google.com/file/d/1UUptDeZZIcQRmsBUYdaL9Yj6kwFIxAxQ/view?usp=sharing">
+                <a target="_blank" href="https://www.q-net.or.kr/crf005.do?id=crf00505&gSite=Q&gId=&jmCd=6921&examInstiCd=1">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/C++.jpg"
+                            src="Image/info_pro.png"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">C++ with Data Structures and Algorithms
-                                <br><span style="color:gray">-by Coding Blocks</span>
+                            <p class="card-text certificate-text">Craftsman Information Processing
+                                <br><span style="color:gray">-HREK</span>
                             </p>
                         
                         </div>
@@ -186,34 +186,21 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a target="_blank" href="https://www.sololearn.com/Certificate/1024-18007548/pdf/">
+                <a target="_blank" href="https://www.ihd.or.kr/introducesubject1.do">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/JavaScript.jpg"
+                            src="Image/linux_master.jpeg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">JavaScript Basics</p>
-                            <p class="certificate-text" style="color:gray">-by Sololearn</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-4">
-                <a target="_blank" href="https://drive.google.com/file/d/1xSYrX-rAThs5GAo1YVGYF2XuRXukm0tf/view?usp=sharing">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top"
-                            src="Image/Data Science.jpg"
-                            alt="Card image cap">
-                        <div class="card-body">
-                            <p class="card-text certificate-text">Data Science</p>  
-                            <p class="certificate-text" style="color:gray">-by _____</p>  
+                            <p class="card-text certificate-text">Linux Master 2nd Grade Cerified</p>
+                            <p class="certificate-text" style="color:gray">-by KAIT</p>
                         </div>
                     </div>
                 </a>
             </div>
         </div>
     </section>
-    <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+    <footer class=footer>Made with ❤️ by Minhyuk Cho</footer>
 </body>
 
 </html>
