--- a/Education.html
+++ b/Education.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Ajit's Portfolio</title>
+    <title>Minhyuk Portfolio</title>
     <link rel="icon" href="Image/engineer.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -60,14 +60,6 @@
         <div class="row">
             <div class="col-lg-6 col-md">
                 <img class="Programming" src="Image/Programming.svg" alt="">
-            </div>
-            <div class="col-lg-6 col-md Coding">
-                <h1>Competitive Programming</h1>
-                <ul class="competitive_icon">
-                    <li><a href="https://www.hackerrank.com/Ajitverma?hr_r=1" target="_blank"><i class="fab fa-hackerrank fa-4x"></i><a></i></li>
-                    <li><a href="https://www.hackerearth.com/@ajit457" target="_blank"><i class="iconify" data-icon="simple-icons:hackerearth" data-inline="false" data-width=50px
-                            data-height=50px></i></a></li>
-                </ul>
             </div>
         </div>
     </section>
@@ -151,7 +143,7 @@
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-school" aria-hidden="true"></i> Coding Coluteer <p class="degree">Taesung-Highschool</p>
+                                    <i class="fas fa-school" aria-hidden="true"></i> Coding Voluteer <p class="degree">Taesung-Highschool</p>
                                 </div>
                                 <div class="box-content">
                                     <div class="box-item">💥 I conducted coding education volunteer for 2nd graders of high school.</div>
