--- a/skill.html
+++ b/skill.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ajit's Portfolio</title>
+  <title>Minhyuk Portfolio</title>
   <link rel="icon" href="Image/engineer.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -109,7 +109,7 @@
       </div>
     </div>
   </section>
-  <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+  <footer class=footer>Made with ❤️ by Minhyuk Cho</footer>
 </body>
 
 </html>
