--- a/skill.html
+++ b/skill.html
@@ -29,7 +29,7 @@
 <body class="container-fluid body_section">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+      <a class="navbar-brand brand-name" href="#">Minhyuk Cho</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -84,25 +84,13 @@
 
           <div class="SkillBar">
             <div id="Skill-HTML">
-              <span class="Skill-Area iconify" data-icon="logos:html-5" data-inline="false" data-width="35" data-height="35"></span>
+              <span class="Skill-Area iconify" data-icon="mdi:mips" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
 
           <div class="SkillBar">
             <div id="Skill-CSS">
-              <span class="Skill-Area iconify" data-icon="logos:css-3" data-inline="false" data-width="35" data-height="35"></span>
-            </div>
-          </div>
-
-          <div class="SkillBar">
-            <div id="Skill-JS">
-              <span class="Skill-Area iconify" data-icon="logos:javascript" data-inline="false" data-width="35" data-height="35"></span>
-            </div>
-          </div>
-
-          <div class="SkillBar">
-            <div id="Skill-SQL">
-              <span class="Skill-Area iconify" data-icon="dashicons:database" data-inline="false" style="color:black" data-width="35" data-height="35"></span>
+              <span class="Skill-Area iconify" data-icon="logos:git" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
         </div>
