--- a/skill.html
+++ b/skill.html
@@ -84,7 +84,7 @@
 
           <div class="SkillBar">
             <div id="Skill-HTML">
-              <span class="Skill-Area iconify" data-icon="mdi:mips" data-inline="false" data-width="35" data-height="35"></span>
+              <span class="Skill-Area iconify" data-icon="logos:assembla" data-inline="false" data-width="35" data-height="35"></span>
             </div>
           </div>
 
