--- a/Project.html
+++ b/Project.html
@@ -96,7 +96,7 @@
                     </div>
                 </section>
 
-                <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+                <footer class=footer>Made with ❤️ by MinHyuk Cho</footer>
 
 </body>
 </html>
